test: add test for modified OfferTurnCard with 100% coverage